--- a/css/screen.css
+++ b/css/screen.css
@@ -25,12 +25,12 @@
 html {
     font-size: 16px;
     line-height: 1.5;
-    font-family: Helvetica, arial, sans-serif;
-    color: grey;
+    font-family: Inter, sans-serif;
+    color: #20223a;
     box-sizing: border-box;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: white;
+    background-color: #F5F6FA;
 }
 
 *,
@@ -47,13 +47,13 @@ html {
 */
 
 ::-moz-selection {
-    background: HotPink;
+    background: #3385FF;
     color: white;
     text-shadow: none;
 }
 
 ::selection {
-    background: HotPink;
+    background: #3385FF;
     color: white;
     text-shadow: none;
 }
@@ -158,18 +158,29 @@ hr {
 }
 
 a {
-    color: HotPink;
+    color: #3385FF;
     transition: all .1s ease-in-out;
 }
 
 a:visited,
 a:active {
-    color: HotPink;
+    color: #1b488c;
 }
 
 a:hover,
 a:focus {
-    color: DeepPink;
+    color: #1b488c;
+}
+
+/*
+Elements: Forms
+---
+Default markup for forms
+*/
+
+input,
+label {
+    display: block;
 }
 
 /*------------------------------------*\
@@ -432,6 +443,29 @@ a:focus {
     Website main logo
 */
 
+.c-logo {
+    height: 24px;
+    display: flex;
+    justify-content: center;
+}
+
+.c-logo__inner-circle {
+    fill: #3385FF;
+}
+
+.c-logo__outer-circle {
+    fill: #1B4186;
+}
+
+.c-logo__text {
+    fill: #20223A;
+}
+
+.c-logo__symbol {
+    height: 100%;
+    display: block;
+}
+
 /*
     Component: Card
     ---
@@ -444,6 +478,14 @@ a:focus {
     Everything form related here
 */
 
+.c-form-field {
+}
+
+.c-form-field--option {
+    display: flex;
+    align-items: center;
+}
+
 /*
     Component: Input
     ---
@@ -451,7 +493,18 @@ a:focus {
 */
 
 .c-input {
-
+    /* all: unset; */
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 100%;
+    border: 1px solid #E2E3E7;
+    border-radius: 3px;
+    font-family: inherit;
+    color: #20223A;
+    font-size: 16px;
+    line-height: 24px;
+    padding: 11px;
 }
 
 .c-input:focus {
